<resources>
    <string name="details">Sathish. V - B.E\n2nd Year, Dept of CSE\nSJBIT.\nmun.sathish@gmail.com\n7353578127</string>
    <string name="sat1">1) Android Utility Application(This app) that contains the following:\n> Paint\n> Email\n> Personal Diary\n> Hexaphone\n> Type and Listen\n> Oscilloscope\n> Color Clock\n> MultiTouch Tester\n\nPlayStore Link:\n https://play.google.com/store/apps/details?id=com.sathish.sathishapp</string>
    <string name="sat2">2) Varchasva Android Application - sjbit college fest related app and  registration of tickets is also available.\n\nPlayStore Link:\n https://play.google.com/store/apps/details?id=com.varchasva.varva</string>
    <string name="sat3">3) EVM(Earned Value Management) - Windows Desktop Based Application:\n      \t\t\tAn application for the client people of the IT Companies. This application can keep track of the project progress according to the input given of the current progress.\n\nYouTube Link:\nhttps://www.youtube.com/watch?v=UGOWhpFUuNo</string>
    <string name="sat4">4) Laser Security Alarm System.\n\nYouTube Link:\nhttps://www.youtube.com/watch?v=nd4QbLPnW68</string>
    <string name="sat5">5) Automatic Switch on/off\n\nYouTube Link:\nhttps://www.youtube.com/watch?v=md9sbvFP-Qw</string>
    <string name="sat6">6) Water Level Indicator.\n\nYouTube Link:\nComing Soon... Check Back Later</string>
    <string name="sat7">7) Mup Software Lab Program Tutorial Videos:\n\t\t\tIts always been a tough subject to understand the lab programs. So inorder to help the students, have made tutorial videos and the link of the playlist is mentioned below.\n\nYouTube Link:\nhttps://www.youtube.com/playlist?list=PL3WAD3UlBnfodvry31wNZIkzO93qCHfi2</string>
    <string name="sat8">8) Conference:\n \t\t\tI had attended and presented papers on the conference on the following topics.\n\n\n a) Convergence of Artificial Intelligence, Emotional Intelligence, Neural Network and Evolutionary Computing.\n\nb) Driving Unconventional Growth through the Industrial Internet of Things.\n\nc) A Framework for Real Time Health Monitoring on Smart Phones.</string>
    <string name="app_name">Sathish\nUtility</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sathish">WELCOME TO SATHISH PRODUCT MANAGEMENT</string>
	<string name="app_description">Check Menu For more Options.\n\nSathish Paint is a coloring tool which helps you to make anything of your imagination.\nPick the color you want and start painting.\n\nPress menu for more options!\n\nHappy painting :)\n\nThis software is released under the Diffulty of Sathish having forgettting his Studies Fully .\n I Dedicate tis app to All My family n Friends of SJBIT, BANGALORE and ST.MARYS SCHOOL, CHENNAI. </string>
    <string name="here_is_your_canvas">Here is your canvas. Start to paint!</string>
    <string name="color">Color</string>
    <string name="emboss">Bold</string>
    <string name="blur">Blur</string>
    <string name="brush_size">Brush size</string>
    <string name="erase">Erase</string>
    <string name="clear_all">Erase all</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="default_brush_size_is">Default brush size is: %1$s</string>
    <string name="your_selected_brush_size_is">Your selected brush size is: %1$s</string>
    <string name="error_brush_size">Please select at least "1" as brush size.</string>
    <string name="choose_brush_width">Choose your Brush width</string>
    <string name="saved_your_location_to">Saved your artwork to %1$s</string>
    <string name="select">Select</string>
    <string name="continue_fuck">Continue</string>
    <string name="ok">OK</string>
    <string name="pick_color">Pick a Color</string>
    <string name="toolbox_share_title">Share</string>
    <string name="share_title_template">Look at what I painted with Sathish Paint! --- Sathish Paint (Simple finger painting) </string>
    <string name="share_text_template">Share as text</string>
    <string name="no_way_to_share">Can\'t locate an app to share with…</string>
    <string name="normal">Pencil</string>
    <string name="your_selected_eraser_size_is">Your selected eraser size is: %1$s</string>
    <string name="default_eraser_size_is">Default erase size is: %1$s</string>
    <string name="error_eraser_size">Please select at least &quot;1&quot; as eraser size.</string>
    <string name="choose_eraser_width">Choose your Eraser width</string>
    <string name="start_game">Start Game</string>
    <string name="hint">Write down what you did, your ideas, your dreams...  Press the “menu” button for more options.</string>
    <string name="today">Today</string>
    <string name="prevEntry">Previous</string>
    <string name="nextEntry">Next</string>
    <string name="goToDate">Go to date...</string>
    <string name="copyleft">Copyleft</string>
    <string name="copyright"><![CDATA[
        <html>
          <head><link rel="stylesheet" href="stylesheet.css" /></head>
          <body>
            <p><b>Diary - Personal diary for Android</b></p>
            <p>This app was Developed by SATHISH.</p>
            <p>SATHISH dedicate this app to all his Family, Friends & Relatives.</p>
            </body>
        </html>
    ]]></string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="tabs">
    <item>SPLASH</item>
    <item>FUN EMAIL</item>
    <item>PERSONAL DIARY</item>
    <item>HEXAPHONE</item>
    <item>TYPE AND LISTEN</item>
    <item>OSCILLOSCOPE</item>
    <item>COLOR CLOCK</item>
    <item>MULTI TOUCH</item>

    </string-array>
    <string name="heading_appearance">Appearance</string>
	<string name="url">mun.sathish@gmail.com</string>
	<string name="contact">SATHISH</string>
	<string name="none">None</string>
	<string name="default_color_scheme">Black &amp; White</string>
	<string name="default_instrument">Piano</string>
	<string name="default_layout">Jammer</string>
	<string-array name="base_notes">
		<item>C</item>
		<item>C#</item>
		<item>D</item>
		<item>D#</item>
		<item>E</item>
		<item>F</item>
		<item>F#</item>
		<item>G</item>
		<item>G#</item>
		<item>A</item>
		<item>A#</item>
		<item>B</item>
	</string-array>
	<string-array name="color_schemes">
		<item>Black &amp; White</item>
		<item>Azure</item>
		<item>Slate</item>
		<item>Silhouette</item>
		<item>Grey &amp; White</item>
		<item>Ebony &amp; Ivory</item>
		<item>Khaki</item>
		<item>Blank</item>
	</string-array>
	<string-array name="instruments">
		<item>Piano</item>
		<item>Organ</item>
	</string-array>
	<string-array name="layouts">
		<item>Jammer</item>
		<item>Sonome</item>
		<item>Janko</item>
	</string-array>
	<string-array name="key_labels">
		<item>English</item>
		<item>Deutsch</item>
		<item>MIDI Note Number</item>
		<item>None</item>
		<item>Solfege</item>
		<item>Whole Tone Number</item>
	</string-array>
	<string-array name="base_octaves">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
	</string-array>
	<string-array name="janko_row_counts">
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
	</string-array>
	<string name="prompt_preferences">Preferences</string>
	<string name="prompt_inneract">Support Hexiano</string>
	<string name="prompt_color_scheme">Colour Scheme</string>
	<string name="prompt_instrument">Instrument</string>
	<string name="prompt_label_type">Labels</string>
	<string name="prompt_layout">Layout</string>
	<string name="prompt_janko_row_count">Rows per Octave</string>
	<string name="summary_janko_row_count">Number of rows of whole-step keys to include for each octave.</string>
	<string name="copyright2">This is Created and Programmed By SATHISH.V</string>
	<string name="heading_jammer">SATHISH</string>
	<string name="heading_sonome">MUNNA(nick name)</string>
	<string name="heading_janko">DUSTAKAR</string>
	<string name="default_sonome_note">E</string>
	<string name="default_sonome_octave">1</string>
	<string name="default_jammer_note">F#</string>
	<string name="default_jammer_octave">6</string>
	<string name="default_janko_note">F</string>
	<string name="default_janko_octave">5</string>
	<string name="default_janko_row_count">4</string>
	<string name="prompt_orientation">Orientation</string>
	<string-array name="orientations">
		<item>Landscape</item>
		<item>Portrait</item>
	</string-array>
	<string name="default_sonome_orientation">Portrait</string>
	<string name="default_jammer_orientation">Landscape</string>
	<string name="default_janko_orientation">Landscape</string>
	<string name="prompt_scale">Key Size</string>
	<string name="default_scale">78</string>
	<string name="heading_general">General</string>
	<string name="summary_scale">Enter percentage to scale keys. Default = 100. Smaller numbers shrink keys. Larger numbers expand them.</string>
	<string name="prompt_landscape_labels">Landscape</string>
	<string name="summary_label_type">What labels do you want to see on the keys?</string>
	<string name="summary_color_scheme">What colours do you want to see?</string>
	<string name="summary_instrument">What sounds do you want to hear?</string>
	<string name="summary_landscape">Do you want to play looking at a landscape (wide) display?</string>
	<string name="summary_layout">What note arrangement on the keys do you want to use?</string>
	<string name="summary_highest_note_octave">The octave of the highest note to include.</string>
	<string name="summary_lowest_note">The lowest playable note to include.</string>
	<string name="summary_highest_note">The highest playable note to include.</string>
	<string name="prompt_lowest_note">Lowest Note</string>
	<string name="prompt_lowest_note_octave">Lowest Note Octave</string>
	<string name="prompt_highest_note">Highest Note</string>
	<string name="summary_lowest_note_octave">The octave of the lowest playable note to include.</string>
	<string name="prompt_highest_note_octave">Highest Note Octave</string>
	<string name="prompt_single_touch_chording">Single-touch Chording</string>
	<string name="summary_single_touch_chording">Play adjacent notes with one finger (4ths and 5ths).</string>
	<string name="prompt_about">About Hexiano</string>
	<string name="prompt_license">License</string>
	<string name="prompt_quit">Exit</string>
	<string name="version">version</string>
	<string name="description">Hexiano is an isomorphic musical keyboard. All intervals, chords, and scales have identical patterns, regardless of the key in which one plays. Hexiano aims to deliver the isomorphic keyboard concept to Android users..</string>
	<string name="open_source">Source Code is Available with SATHISH</string>
	<string name="distribution"></string>
	<string name="license">This Program orginally copy is available with SATHISH...  Contact him For the same and Let him know how much can be rated to THese apps... 
	    Its His First Ever made ANDROID app</string>
	<string name="credit_piano">Sounds from the acoustic grand piano soundfont (Yamaha Disklavier Pro), release 2008-09-10,
by Roberto Gordo Saez (roberto.gordo@gmail.com), were adapted for use in Hexiano. (See http://zenvoid.org/audio.html.)
Specifically, we translated a set of files (mostly from the third velocity layer) from the soundfont into Ogg Vorbis format, with
a rather drastic loss of fidelity. Please do not take the Hexiano piano sound as representative
of the quality of this excellent soundfont. It just helped to start from a high-quality source.




</string>
</resources>